# DIS-Project-Lensed-Galaxy

./: .dockerignore  .gitattributes  .gitignore  .gitlab-ci.yml  ADU_check.ipynb  Dockerfile  LICENSE  PROBES_playground.ipynb  README.md  full_sample.ipynb  full_sample_colab.ipynb  lowres_sample_train.ipynb  pyproject.toml  run_sample.sh  run_stage2.sh  run_stage3.sh  sanity_check.ipynb  small_sample_train.ipynb  small_sample_train.py  train_prior.py
.github/workflows/: ci.yml  pages.yml
artifacts/: README.md  manifest.json
data/: preprocess.py
data/gals_gband_norm/: Courteau97_UGC10011.npy  Courteau97_UGC10026.npy  Courteau97_UGC10047.npy  Courteau97_UGC10062.npy  Courteau97_UGC10096.npy  Courteau97_UGC10210.npy  Courteau97_UGC10224.npy  Courteau97_UGC10226.npy  Courteau97_UGC10230.npy  Courteau97_UGC10235.npy  Courteau97_UGC10306.npy  Courteau97_UGC10328.npy  Courteau97_UGC10337.npy  Courteau97_UGC10413.npy  Courteau97_UGC10439.npy  Courteau97_UGC10456.npy  Courteau97_UGC10522.npy  Courteau97_UGC1053.npy  Courteau97_UGC10536.npy  Courteau97_UGC10545.npy  Courteau97_UGC10560.npy  Courteau97_UGC10621.npy  Courteau97_UGC10655.npy  Courteau97_UGC10706.npy  Courteau97_UGC10721.npy  Courteau97_UGC10815.npy  Courteau97_UGC1083.npy  Courteau97_UGC10909.npy  Courteau97_UGC10997.npy  Courteau97_UGC10998.npy  Courteau97_UGC11038.npy  Courteau97_UGC11076.npy  Courteau97_UGC11085.npy  Courteau97_UGC111.npy  Courteau97_UGC11118.npy  Courteau97_UGC1118.npy  Courteau97_UGC11252.npy  Courteau97_UGC11264.npy  Courteau97_UGC11373.npy  Courteau97_UGC1152.npy  (+1662 more)
docs/: Makefile  api.md  artifacts.md  ci_container.md  cli.md  conf.py  hpc.md  index.md  installation.md  limitations.md  notebooks.md  overview.md  preprocessing.md  references.md  requirements.txt  sampling.md  validation.md
notebooks/: ADU_check.ipynb  Figure2OOD_colab.ipynb  MIRAcheck.ipynb  MIRAcheck_colab.ipynb  PQMassPriorCheck.ipynb  PQMassPriorCheck_colab.ipynb  README.md  figure2_ood_colab.ipynb  full_sample.ipynb  full_sample_colab.ipynb  inspect_samples.ipynb  mira_posterior_validation_colab.ipynb  mira_posterior_validation_hpc.ipynb  posterior_reconstruction_colab.ipynb  posterior_reconstruction_hpc.ipynb  pqm_prior_validation_colab.ipynb  pqm_prior_validation_hpc.ipynb  probes_pick_source.ipynb  quickstart.ipynb
requirements/: constraints-py311-cpu.txt
scripts/: run_sample.sh  run_sample_prior.sh  run_stage2.sh  run_stage3.sh
scripts/lib/: hpc_common.sh
slurm_logs/: .gitkeep
src/: backfill_wandb.py  chi2.py  figure2.py  lensing.py  lowres_sample_train.py  preprocess.py  sample.py  sample_prior.py  train_prior.py  validate_mira.py  validate_pqmass.py
tests/: test_artifact_manifest.py  test_hpc_scripts.py  test_lensing.py  test_notebooks.py  test_preprocess.py  test_sample_utils.py  test_validation.py
