[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dis-project-lensed-galaxy"
version = "0.1.0"
description = "Score-based diffusion experiments for lensed galaxy image priors."
readme = "README.md"
requires-python = ">=3.10,<3.13"
dependencies = [
    "numpy>=1.24,<2.0",
    "torch>=2.1,<3.0",
    "score-models==0.5.11",
    "caustics==1.6.0",       # lensing.py SIE + external-shear forward model
    "matplotlib>=3.8",       # sample.py diagnostic figures
]

[project.optional-dependencies]
preprocess = [
    "astropy>=5.3",
    "tqdm>=4.66",
]
figures = [
    "pillow>=10.0",          # figure2.py OOD reproduction
]
logging = [
    "wandb>=0.16",           # backfill_wandb.py
]
validation = [
    "pqm>=0.6",
    "mira_score>=0.1.7",
    "scipy>=1.10",
]
notebooks = [
    "ipykernel>=6.29",
    "jupyterlab>=4.0",
    "pqm>=0.6",              # PQMass  — prior validation
    "mira_score>=0.1.7",     # MIRA    — posterior validation
    "scipy>=1.10",
]
dev = [
    "pytest>=8.0",
    "ruff>=0.5",
    "build>=1.2",
]
all = [
    "astropy>=5.3",
    "tqdm>=4.66",
    "pillow>=10.0",
    "wandb>=0.16",
    "ipykernel>=6.29",
    "jupyterlab>=4.0",
    "pqm>=0.6",
    "mira_score>=0.1.7",
    "scipy>=1.10",
    "pytest>=8.0",
    "ruff>=0.5",
    "build>=1.2",
]

[project.scripts]
preprocess-probes = "preprocess:main"
train-prior = "train_prior:main"
train-prior-lowres = "lowres_sample_train:main"
sample-posterior = "sample:main"
sample-prior = "sample_prior:main"
validate-chi2 = "chi2:main"
validate-pqmass = "validate_pqmass:main"
validate-mira = "validate_mira:main"
reproduce-figure2 = "figure2:main"

[tool.setuptools]
package-dir = {"" = "src"}
py-modules = [
    "backfill_wandb",
    "chi2",
    "figure2",
    "lensing",
    "lowres_sample_train",
    "preprocess",
    "sample",
    "sample_prior",
    "train_prior",
    "validate_mira",
    "validate_pqmass",
]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src", "data"]
